--- a/public/style/style.css
+++ b/public/style/style.css
@@ -5,15 +5,9 @@ body {
   margin: 0;
   padding: 0;
 }
-#stage {
-  position: absolute;
-  border: 1px solid #000;
-}
-#toolPicker {
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 1;
+.control-panel {
+  float: left;
+  width: 80px;
 }
 #toolPicker a {
   display: block;
@@ -26,12 +20,6 @@ body {
 #toolPicker a.on {
   background-color: #ccc;
 }
-#colorPicker {
-  position: fixed;
-  right: 0;
-  top: 0;
-  z-index: 1;
-}
 #colorPicker a {
   display: block;
   width: 24px;
@@ -41,8 +29,14 @@ body {
 #colorPicker a.on {
   border-color: #fff;
 }
+.stage {
+  position: relative;
+  margin-left: 80px;
+}
+.board,
 .ghost {
   position: absolute;
-  left: 1px;
-  top: 1px;
+  left: 0;
+  top: 0;
+  border: 1px solid #000;
 }
